--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "@types/react": "19.1.8",
     "typescript": "5.8.3"
   }
